# asciipixels

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
src/: .gitignore
src/asciipixels/: __init__.py  __main__.py  core.py  typealiases.py  utils.py
src/asciipixels/image/: image.py
src/asciipixels/video/: video.py
